<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_add_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentScrim="?attr/colorPrimary">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_add_detail"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView5"
        android:layout_width="match_parent"


        android:layout_height="match_parent"
        app:layout_anchorGravity="center"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="197dp">

                <EditText
                    android:id="@+id/edit_name_new_detail"
                    android:layout_width="259dp"
                    android:layout_height="56dp"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/label_objet"
                    android:inputType="textAutoComplete"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toTopOf="@+id/edit_etat_new_detail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/edit_etat_new_detail"
                    android:layout_width="261dp"
                    android:layout_height="50dp"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/label_etat_detail"
                    android:inputType="textAutoComplete"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="387dp"
                android:layout_height="101dp">

                <Button
                    android:id="@+id/button_enregister_new_detail"
                    android:layout_width="191dp"
                    android:layout_height="49dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/label_bouton_enregistrer_new_detail"
                    android:textColor="@android:color/primary_text_light"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>